--- a/Index.html
+++ b/Index.html
@@ -21,27 +21,27 @@
             <table class="points">
                 <tr>   
                     <td><label for="1s">1-s</label></td>
-                    <td><input id="1s"></td>
+                    <td><input id="1s" class="selectable"></td>
                 </tr>
                 <tr>
                     <td><label for="2s">2-s</label></td>
-                    <td><input id="2s"></td>
+                    <td><input id="2s" class="selectable"></td>
                 </tr>
                 <tr>
                     <td><label for="3s">3-s</label></td>
-                    <td><input id="3s"></td>
+                    <td><input id="3s" class="selectable"></td>
                 </tr>
                 <tr>
                     <td><label for="4s">4-s</label></td>
-                    <td><input id="4s"></td>
+                    <td><input id="4s" class="selectable"></td>
                 </tr>
                 <tr>
                     <td><label for="5s">5-s</label></td>
-                    <td><input id="5s"></td>
+                    <td><input id="5s" class="selectable"></td>
                 </tr>
                 <tr>
                     <td><label for="6s">6-s</label></td>
-                    <td><input id="6s"></td>
+                    <td><input id="6s" class="selectable"></td>
                     <td><label for="sum">sum</label></td>
                     <td><input id="sum"></td>
                     <td><label for="bonus">bonus</label></td>
@@ -49,39 +49,39 @@
                 </tr>
                 <tr>
                     <td><label for="onePair">One pair</label></td>
-                    <td><input id="onepair"></td>
+                    <td><input id="onePair" class="selectable"></td>
                 </tr>
                 <tr>
-                    <td><label for="twoSame">Two same</label></td>
-                    <td><input id="twoSame"></td>
+                    <td><label for="twoPairs">Two pairs</label></td>
+                    <td><input id="twoPairs" class="selectable"></td>
                 </tr>
                 <tr>
                     <td><label for="threeSame">Three same</label></td>
-                    <td><input id="threeSame"></td>
+                    <td><input id="threeSame" class="selectable"></td>
                 </tr>
                 <tr>
                     <td><label for="fourSame">Four same</label></td>
-                    <td><input id="fourSame"></td>
+                    <td><input id="fourSame" class="selectable"></td>
                 </tr>
                 <tr>
                     <td><label for="fullHouse">Full house</label></td>
-                    <td><input id="fullHouse"></td>
+                    <td><input id="fullHouse" class="selectable"></td>
                 </tr>
                 <tr>
                     <td><label for="smallStraight">Small straight</label></td>
-                    <td><input id="smallStraight"></td>
+                    <td><input id="smallStraight" class="selectable"></td>
                 </tr>
                 <tr>
                     <td><label for="largeStraight">Large straight</label></td>
-                    <td><input id="largeStraight"></td>
+                    <td><input id="largeStraight" class="selectable"></td>
                 </tr>
                 <tr>
                     <td><label for="chance">Chance</label></td>
-                    <td><input id="chance"></td>
+                    <td><input id="chance" class="selectable"></td>
                 </tr>
                 <tr>
                     <td><label for="yatzy">Yatzy</label></td>
-                    <td><input id="yatzy"></td>
+                    <td><input id="yatzy" class="selectable"></td>
                     <td></td>
                     <td></td>
                     <td><label for="total">Total</label></td>
